fixing navbar with adding nowrap class and making About page responsive

--- a/style.css
+++ b/style.css
@@ -95,3 +95,21 @@ p {
   box-shadow: var(--box-shadow);
   color: var(--secondary-color);
 }
+
+@media (max-width: 576px) {
+  h1,
+  h2,
+  h3 {
+    margin-bottom: 10px;
+  }
+  h1 {
+    font-size: 48px;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  h3 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
